tests/NormalTests/paczka1/small_fuzzy/78174002.err
Error in line 4: COgQYtx A633 56,4
Error in line 7: yOIU9WZGtc S221 96,2
Error in line 6: XGMgppJYRGD A633 88,6
